--- a/ckan/templates/home/layout1.html
+++ b/ckan/templates/home/layout1.html
@@ -25,7 +25,7 @@
              whether you need to update the docs. #}
           {# Start template block example. #}
           {% block featured_group %}
-            {% snippet 'home/snippets/featured_group.html' %}
+  {{ h.recently_changed_packages_activity_stream(limit=4) }}
           {% endblock %}
           {# End template block example. #}
         </div>
