--- a/ckan/templates/package/new_resource.html
+++ b/ckan/templates/package/new_resource.html
@@ -8,7 +8,7 @@
 {% block breadcrumb_content %}
   {{ super() }}
   {% if pkg %}
-    <li class="active"><a href="#">{{ _('Add New Resource') }}</a></li>
+    <li class="active"><a href="#">{{ _('Add New File or Directory') }}</a></li>
   {% endif %}
 {% endblock %}
 
