--- a/ckan/templates/package/resource_edit_base.html
+++ b/ckan/templates/package/resource_edit_base.html
@@ -14,20 +14,20 @@
 {% endblock %}
 
 {% block content_action %}
-    {% link_for _('All resources'), named_route=pkg.type ~ '.resources', id=pkg.name, class_='btn btn-default', icon='arrow-left' %}
+    {% link_for _('All Files and Directories'), named_route=pkg.type ~ '.resources', id=pkg.name, class_='btn btn-default', icon='arrow-left' %}
     {% if res %}
-	{% link_for _('View resource'), named_route=pkg.type ~ '_resource.read', id=pkg.name, resource_id=res.id, class_='btn btn-default', icon='eye' %}
+	{% link_for _('View'), named_route=pkg.type ~ '_resource.read', id=pkg.name, resource_id=res.id, class_='btn btn-default', icon='eye' %}
   {% endif %}
 {% endblock %}
 
 {% block content_primary_nav %}
-  {{ h.build_nav_icon(pkg.type ~ '_resource.edit', _('Edit resource'), id=pkg.name, resource_id=res.id, icon='pencil-square') }}
+  {{ h.build_nav_icon(pkg.type ~ '_resource.edit', _('Edit'), id=pkg.name, resource_id=res.id, icon='pencil-square') }}
   {% block inner_primary_nav %}{% endblock %}
   {{ h.build_nav_icon(pkg.type ~ '_resource.views', _('Views'), id=pkg.name, resource_id=res.id, icon='bars') }}
 {% endblock %}
 
 {% block primary_content_inner %}
-  <h1 class="hide-heading">{% block form_title %}{{ _('Edit resource') }}{% endblock %}</h1>
+  <h1 class="hide-heading">{% block form_title %}{{ _('Edit file or directory') }}{% endblock %}</h1>
   {% block form %}{% endblock %}
 {% endblock %}
 
