--- a/ckan/templates/package/snippets/package_basic_fields.html
+++ b/ckan/templates/package/snippets/package_basic_fields.html
@@ -91,14 +91,18 @@
     {% if show_visibility_selector %}
     {% block package_metadata_fields_visibility %}
     <div class="form-group control-medium">
-      <label for="field-private" class="form-label">{{ _('Visibility') }}</label>
+      <label for="field-private" class="form-label">{{ _('Garvan-wide Visibility') }}</label>
       <div class="controls">
         <select id="field-private" name="private" class="form-control">
-          {% for option in [('True', _('Private')), ('False', _('Public'))] %}
+          {% for option in [('False', _('Metadata + Links to Files/Folders')),('True', _('Basic Metadata Only'))] %}
           <option value="{{ option[0] }}" {% if option[0] == data.private|trim %}selected="selected"{% endif %}>{{ option[1] }}</option>
           {% endfor %}
         </select>
       </div>
+      <span class="info-block">
+        <i class="fa fa-info-circle"></i>
+        Only logged in Garvan users can view your dataset.
+      </span>
     </div>
     {% endblock %}
     {% endif %}
