--- a/ckanext/ckanext-scheming-master/ckanext/scheming/templates/scheming/form_snippets/organization.html
+++ b/ckanext/ckanext-scheming-master/ckanext/scheming/templates/scheming/form_snippets/organization.html
@@ -20,17 +20,21 @@
       or h.scheming_field_required(field),
     organization_option_tag=organization_option_tag %}
 
-  {% block package_metadata_fields_visibility %}
-    <div class="control-group form-group control-medium">
-      <label for="field-private" class="control-label">{{ _('Visibility') }}</label>
+    {% block package_metadata_fields_visibility %}
+    <div class="form-group control-medium">
+      <label for="field-private" class="form-label">{{ _('Garvan-wide Visibility') }}</label>
       <div class="controls">
-        <select id="field-private" name="private" class="form-control form-select">
-          {% for option in [('True', _('Private')), ('False', _('Public'))] %}
+        <select id="field-private" name="private" class="form-control">
+          {% for option in [('False', _('Metadata + Links to Files/Folders')),('True', _('Basic Metadata Only'))] %}
           <option value="{{ option[0] }}" {% if option[0] == data.private|trim %}selected="selected"{% endif %}>{{ option[1] }}</option>
           {% endfor %}
         </select>
       </div>
+      <span class="info-block">
+        <i class="fa fa-info-circle"></i>
+        Only logged in Garvan users can view your dataset.
+      </span>
     </div>
-  {% endblock %}
+    {% endblock %}
 
   </div>
