Warning message about uploads

--- a/ckanext/ckanext-scheming-master/ckanext/scheming/templates/scheming/package/snippets/resource_form.html
+++ b/ckanext/ckanext-scheming-master/ckanext/scheming/templates/scheming/package/snippets/resource_form.html
@@ -38,6 +38,7 @@
   {%- endif -%}
 {% endblock %}
 
+    <p><strong>Important:</strong> Sensitive data including clinical and personally identifiable information must not be uploaded.</p>
 {% block basic_fields %}
   {%- if not dataset_type -%}
     <p>
